Fix card sizes and footer alignment on xs

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,11 +120,17 @@ main {
 
 .card-img-top {
     width: 100%;
-    height: 15vw;
+    height: 18vw;
     object-fit: cover;
 }
 
 .experience .position:last-child p,
 .about p:last-child {
     margin-bottom: 0;
+}
+
+@media (width < 576px) {
+    .card-img-top {
+        height: 50vw;
+    }
 }
